--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "prettier_dist": "prettier --write \"dist\"",
     "watch": "tsc-watch --onSuccess \"npm run treatjs2\"",
     "server": "lite-server --baseDir=",
-    "copy": "cpx -w -f \"src/**\" \"dist/\" -p --ignore \"*.ts\"",
-    "start": "concurrently \"npm run copy\" \"npm run watch\" \"npm run server\"",
-    "glob_dist": "glob \"dist/**/*.js\" -i \"dist/**/*.min.js\""
+    "copy": "cpx -w -f \"src/**\" \"build/src/\" -p --ignore \"*.ts\"",
+    "copy_tests": "cpx -w -f \"tests/**\" \"build/tests/\" -p --ignore \"*.ts\"",
+    "clean_folder": "rimraf \"dist/\" -I",
+    "start": "concurrently \"npm run clean_folder\" \"npm run copy_tests\" \"npm run copy\" \"npm run watch\" \"npm run server\""
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,8 @@
     "lite-server": "^2.6.1",
     "minify": "^10.3.0",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
+    "tsc-hooks": "^1.1.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.1.6"
   }
