--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "declaration": true,
     "alwaysStrict": true,
     "lib": [
+      "es5",
       "es6",
       "dom",
       "webworker"
@@ -30,7 +31,7 @@
   ],
   "exclude": [
     "node_modules/**/*",
-    "./dist"
+    "build/"
   ],
   "hooks": []
 }
